force-app/main/default/objects/Private_Object__c/Private_Object__c.object-meta.xml
<CustomObject>
    <label>Private Object</label>
    <nameField>
        <label>Private Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Privateobjects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>