force-app/main/default/objects/Private_Object__c/fields/Post_Your_Comment__c.field-meta.xml
<CustomField>
    <fullName>Post_Your_Comment__c</fullName>
    <label>Post Your Comment</label>
    <length>30</length>
    <type>Text</type>
</CustomField>