force-app/main/default/objects/Private_Object__c/fields/Private_Text__c.field-meta.xml
<CustomField>
    <fullName>Private_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private Text</label>
    <type>Checkbox</type>
</CustomField>