force-app/main/default/objects/Private_Object__c/fields/Public_Text__c.field-meta.xml
<CustomField>
    <fullName>Public_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Text</label>
    <type>Checkbox</type>
</CustomField>